# tt-umd

./: .check-copyright-config.yaml  .clang-format  .clang-tidy  .clang-tidy-build  .clangd  .codechecker.json  .codechecker.skiplist  .gersemirc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .iwyu_mappings.imp  .pre-commit-config.yaml  .yamllint  BH_IO_ORDERING_2735_NOTES.md  CHANGELOG  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.clang-tidy.md  README.emu.md  README.md  SIMULATORS.md  Tracy_Integration_Internship_Proposal.docx  Tracy_Integration_Internship_Proposal.md  VERSION  VERSIONING.md  base_api_mapping_table.md  blackhole_1chip_cluster.yaml  build_umd.sh  c++.natvis  ccn_plotter.py  cluster.yaml  cluster0.yaml  cluster1.yaml  cluster_2_1.yaml  cluster_descriptor.yaml  (+39 more)
common/: CMakeLists.txt  assert.hpp  backtrace.hpp  disjoint_set.hpp  gtest_initializer.hpp  logger.hpp  logger2.hpp  logger_.cpp  logger_.hpp  semver.hpp  strong_type.hpp  timestamp.hpp  umd_asio.hpp  utils.hpp
device/: CMakeLists.txt  arc_messenger.cpp  arc_telemetry_reader.cpp  architecture.h  architecture_implementation.cpp  architecture_implementation.h  blackhole_implementation.cpp  blackhole_implementation.h  cluster.cpp  cluster.h  cluster_descriptor.cpp  cluster_pcie_interface.cpp  coordinate_manager.cpp  coordinate_manager.h  cpuset_lib.cpp  cpuset_lib.hpp  device_api.h  device_api_metal.h  driver_atomics.h  ethernet_broadcast.cpp  grayskull_implementation.cpp  grayskull_implementation.h  hugepage.cpp  hugepage.h  hugepage.hpp  ioctl.h  kmdif.h  lock_manager.cpp  module.mk  noc_access.cpp  noc_access.hpp  pch.hpp  pci_device.cpp  pci_device.hpp  remote_communication.cpp  remote_transfer_lib.cpp  remote_transfer_lib.hpp  soc_arch_descriptor.cpp  soc_descriptor.cpp  soc_descriptor.h  (+46 more)
device/arc/: arc_messenger.cpp  arc_telemetry_reader.cpp  blackhole_arc_message_queue.cpp  blackhole_arc_messenger.cpp  blackhole_arc_telemetry_reader.cpp  blackhole_spi.cpp  blackhole_spi_tt_device.cpp  smbus_arc_telemetry_reader.cpp  spi_tt_device.cpp  wormhole_arc_messenger.cpp  wormhole_arc_telemetry_reader.cpp  wormhole_spi.cpp  wormhole_spi_tt_device.cpp
device/arch/: architecture_implementation.cpp  blackhole_implementation.cpp  grendel_implementation.cpp  wormhole_implementation.cpp
device/blackhole/: blackhole_arc_message_queue.cpp  blackhole_arc_messenger.cpp  blackhole_arc_telemetry_reader.cpp  blackhole_coordinate_manager.cpp  blackhole_coordinate_manager.h  blackhole_implementation.cpp  blackhole_implementation.h  device_data.hpp  impl_device.cpp  tt_device_blackhole.cpp
device/chip/: chip.cpp  local_chip.cpp  mock_chip.cpp  pcie_connection.cpp  remote_chip.cpp  sw_emule_chip.cpp  tlb_manager.cpp  tlb_manager.h
device/chip_helpers/: emule_tlb.cpp  kmd_tlb_allocator.cpp  silicon_sysmem_buffer.cpp  silicon_sysmem_manager.cpp  simulation_sysmem_buffer.cpp  simulation_sysmem_manager.cpp  simulation_tlb_allocator.cpp  simulation_tlb_manager.cpp  sysmem_buffer.cpp  sysmem_manager.cpp  tlb_allocator.cpp  tlb_manager.cpp  tt_sim_tlb_manager.cpp
device/common/: assert.hpp  backtrace.hpp  disjoint_set.hpp  pipe_communication.hpp  tracy.hpp  utils.hpp
device/coordinates/: blackhole_coordinate_manager.cpp  coord_io.cpp  coordinate_manager.cpp  quasar_coordinate_manager.cpp  wormhole_coordinate_manager.cpp
device/firmware/: blackhole_18_7_firmware_info_provider.cpp  firmware_info_provider.cpp  firmware_utils.cpp  wormhole_18_3_firmware_info_provider.cpp  wormhole_18_4_firmware_info_provider.cpp  wormhole_18_7_firmware_info_provider.cpp  wormhole_legacy_firmware_info_provider.cpp
device/grayskull/: device_data.hpp  grayskull_coordinate_manager.cpp  grayskull_coordinate_manager.h  grayskull_implementation.cpp  grayskull_implementation.h  impl_device.cpp  impl_device.hpp  tt_device_grayskull.cpp
device/jtag/: jtag.cpp  jtag_device.cpp
device/libs/: README.md  create_ethernet_map.h
device/lite_fabric/: lite_fabric_host_utils.cpp
device/logger_init/: CMakeLists.txt  logger_init.cpp
device/logging/: config.cpp
device/mmio/: mmio_device_io_factory.cpp  rtl_simulation_mmio_device_io.cpp  silicon_mmio_device_io.cpp  ttsim_mmio_device_io.cpp
device/mockup/: tt_mockup_device.hpp
device/pcie/: device_memcpy.cpp  device_memcpy.hpp  io_window.cpp  ioctl.h  pci_device.cpp  (+15 more)
examples/: CMakeLists.txt  README.md  tt_device_example.cpp
nanobind/: CMakeLists.txt  __init__.py  cluster.cpp  generate_init.py  py_api_basic_types.cpp  py_api_cluster.cpp  py_api_error.cpp  py_api_logging.cpp  py_api_module.cpp  py_api_remote_communication.cpp  py_api_soc_descriptor.cpp  py_api_sysmem.cpp  py_api_telemetry.cpp  py_api_tlb_manager.cpp  py_api_topology_discovery.cpp  py_api_tt_device.cpp  py_api_warm_reset.cpp
new_device/: CMakeLists.txt  blackhole_tt_device.cpp  blackhole_tt_device.h  chip.cpp  chip.h  cluster.h  cluster_descriptor.cpp  cluster_descriptor.h  common_types.h  cpuset_lib.cpp  cpuset_lib.h  device_api_metal.h  driver_atomics.h  grayskull_tt_device.cpp  grayskull_tt_device.h  local_chip.cpp  local_chip.h  module.mk  pci_device.cpp  pci_device.h  soc_descriptor.cpp  soc_descriptor.h  system_util.cpp  system_util.h  tlb.h  tt_device.cpp  tt_device.h  tt_io.hpp  wormhole_tt_device.cpp  wormhole_tt_device.h  xy_pair.h
simulation/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  gtest_initializer.hpp  module.mk  pch.hpp  unit_test_main.cpp
tools/: CMakeLists.txt  README.md  common.hpp  eth_info.cpp  gather_host_specs.py  harvesting.cpp  lock_virus.cpp  repro.cpp  sim_server.cpp  start_device.cpp  system_health.cpp  telemetry.cpp  test_io.cpp  tlb_virus.cpp  topology.cpp  warm_reset.cpp
tt-dal/: .clangd  .gitignore  CMakeLists.txt  DESIGN.md  NOTES.md  README.md
tt-kmd-lib/: CMakeLists.txt
tt-umd/: CMakeLists.txt  cluster.cpp  cluster_descriptor.cpp  cpuset_lib.cpp  noc_access.hpp  warm_reset.cpp
tt-umd-workload/: CMakeLists.txt
tt_kmd_lib/: CMakeLists.txt
tt_umd/: CMakeLists.txt  pyproject.toml
tt_umd_workload/: CMakeLists.txt
(+1832 files in other folders)
