[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "tt-umd"
version = "1.0.0"
authors = [
    { name = "Tenstorrent", email = "info@tenstorrent.com" }
]
description = "User Mode Driver for tenstorrent"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
]
urls = { homepage = "http://www.tenstorrent.com" }

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/"
# Only build the Python-related targets
cmake.targets = ["nanobind_tt_umd", "device"]
# Exclude development files from the wheel
wheel.exclude = ["CMakeCache.txt", "*.cmake", "CMakeFiles/", "Makefile"]
# Install only Python components (exclude lib/, include/, etc.)
install.components = ["python"]

[tool.scikit-build.cmake.define]
TT_UMD_BUILD_TESTS = "OFF"
TT_UMD_BUILD_SIMULATION = "OFF" 
TT_UMD_BUILD_PYTHON = "ON"