[build-system]
requires = ["scikit-build-core>=0.11", "nanobind", "setuptools"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.0.0",
  "pytest>=8.0.0",
  "pre-commit>=3.5.0",
  "build>=1.0.0",
  "twine>=5.0.0",
]

[project]
name = "tt-umd"
dynamic = ["version"]
authors = [
    { name = "Tenstorrent", email = "foundationsw-umd@tenstorrent.com" }
]
description = "User Mode Driver for tenstorrent"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
]

[project.urls]
"Homepage" = "https://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-umd/issues"
"Source" = "https://github.com/tenstorrent/tt-umd"
"Documentation" = "https://github.com/tenstorrent/tt-umd/blob/main/README.md"

[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/"
# Only build the Python-related targets (new key in scikit-build-core >= 0.10)
build.targets = ["nanobind_tt_umd_init", "device"]
# Exclude development files from the wheel
wheel.exclude = ["CMakeCache.txt", "*.cmake", "CMakeFiles/", "Makefile"]
# Install only the 'pip_wheel' component defined in CMake (new key path)
install.components = ["pip_wheel"]

[tool.scikit-build.cmake.define]
TT_UMD_BUILD_TOOLS = "OFF"
TT_UMD_BUILD_EXAMPLES = "OFF"
TT_UMD_BUILD_TESTS = "OFF"
TT_UMD_BUILD_SIMULATION = "ON"
TT_UMD_BUILD_PIP = "ON"
TT_UMD_BUILD_PYTHON = "ON"
TT_UMD_BUILD_STATIC = "ON"
TT_UMD_ENABLE_LOGGING = "ON"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>.*)"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
archs = "x86_64"
skip = "*-musllinux_*"
build-verbosity = 1
